2008-05-01  Jürg Billeter  <j@bitron.ch>

	* vala/valacfgbuilder.vala:
	* vala/valanullchecker.vala:
	* vala/valasemanticanalyzer.vala:
	* vala/valasymbolresolver.vala:
	* vapigen/valagidlparser.vala:

	Fix crash when using errordomain methods,
	based on patch by Phil Housley, fixes bug 530537

2008-04-28  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gdk-2.0/: fix GdkEvent* bindings

	* vapi/gdk-2.0.vapi, vapi/gtk+-2.0.vapi: regenerated

2008-04-28  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/libsexy/: fix sexy_icon_entry_set_icon binding,
	patch by Evan Nemerson

	* vapi/libsexy.vapi: regenerated

2008-04-28  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/: fix gtk_box_query_child_packing binding,
	patch by Evan Nemerson

	* vapi/gtk+-2.0.vapi: regenerated

2008-04-27  Jürg Billeter  <j@bitron.ch>

	* vala/valadatatype.vala:

	Fix generic type arguments in to_string()

2008-04-26  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala:

	Fix crash when using abstract properties

2008-04-26  Jürg Billeter  <j@bitron.ch>

	* compiler/valacompiler.vala:

	Build executable by default

	* ccode/Makefile.am:
	* compiler/Makefile.am:
	* gee/Makefile.am:
	* gen-project/Makefile.am:
	* gobject/Makefile.am:
	* tests/testrunner.sh:
	* vala/Makefile.am:
	* vapigen/Makefile.am:

	Update build system to use -C

2008-04-26  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala:

	Always initialize local array length variables, fixes bug 529863

2008-04-26  Jürg Billeter  <j@bitron.ch>

	* vala/valaarraytype.vala:
	* vala/valaclassinstancetype.vala:
	* vala/valaclasstype.vala:
	* vala/valadatatype.vala:
	* vala/valadelegatetype.vala:
	* vala/valaerrortype.vala:
	* vala/valainterfaceinstancetype.vala:
	* vala/valainterfacetype.vala:
	* vala/valamethodtype.vala:
	* vala/valanulltype.vala:
	* vala/valapointertype.vala:
	* vala/valasemanticanalyzer.vala:
	* vala/valasymbolresolver.vala:
	* vala/valatypeparametertype.vala:
	* vala/valavaluetype.vala: